feat: index.jsp 카드 style 및 클릭이벤트 적용