@@ -16,13 +16,13 @@ import java.net.URISyntaxException;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
 public class TourApiService {
 
     public static final String API_KEY = "g7zo%2B%2BOOdEI5niJTnCjpDjZ5%2BBmi10b1nxZ3n96a7oJeYd%2BwsdXSYSCsIYDNoPKaUMp%2BrdQD3Zq03DxnOCKO8w%3D%3D";
-//    public static final String API_KEY = "g7zo++OOdEI5niJTnCjpDjZ5+Bmi10b1nxZ3n96a7oJeYd+wsdXSYSCsIYDNoPKaUMp+rdQD3Zq03DxnOCKO8w==";
     
 
     public static final String TOUR_API_BASE_URL = "http://apis.data.go.kr/B551011/KorService1/locationBasedList1";
@@ -34,8 +34,9 @@ public class TourApiService {
         URI uri = null;
         try {
             uri = new URI(TOUR_API_BASE_URL +
-                    "?serviceKey=g7zo%2B%2BOOdEI5niJTnCjpDjZ5%2BBmi10b1nxZ3n96a7oJeYd%2BwsdXSYSCsIYDNoPKaUMp%2BrdQD3Zq03DxnOCKO8w%3D%3D" +
-                    "&numOfRows=10&pageNo=1&MobileOS=ETC&MobileApp=AppTest&arrange=A&mapX=126.73024&mapY=37.5062528&radius=1000&listYN=Y");
+                    "?serviceKey=" + API_KEY +
+                    "&numOfRows=10&pageNo=1&MobileOS=ETC&MobileApp=AppTest&arrange=A" +
+                    "&mapX=" + lon + "&mapY=" + lat + "&radius=1000&listYN=Y");
         } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
@@ -63,13 +64,9 @@ public class TourApiService {
                         return tourItem;
                     })
                     .filter(dto -> !dto.imageUrl.isBlank())
-                    .toList();
+                    .collect(Collectors.toList());
             return tourApiDto;
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        } catch (InterruptedException e) {
-            throw new RuntimeException(e);
-        } catch (JAXBException e) {
+        } catch (IOException | InterruptedException | JAXBException e) {
             throw new RuntimeException(e);
         }
 
